[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "keba_kecontact"
version = "4.1.0"
authors = [{ name = "Philipp Danner", email = "philipp@danner-web.de" }]
description = "A python library to communicate with the KEBA charging stations via udp"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.11"
dependencies = ["asyncio_dgram>=2.2.0", "ifaddr>=0.2.0"]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["keba_kecontact*"]

[tool.ruff]
fix = true
line-length = 100

[tool.ruff.lint]
select = ["I", "E", "F", "D", "UP", "W", "N", "I", "ANN", "RUF", "PL"]
ignore = ["PLR2004"]

[tool.ruff.lint.pylint]
max-args = 6

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 100
skip-magic-trailing-comma = true
